writerfilter/source/rtftok/rtfdocumentimpl.hxx
@@ -363,7 +363,8 @@ public:
     bool isInBackground();
     void setDestinationText(OUString& rString);
     /// Resolve a picture: If not inline, then anchored.
-    int resolvePict(bool bInline);
+    int resolvePict(bool bInline,
+            css::uno::Reference<css::drawing::XShape> const& xShape);
 
     /// If this is the first run of the document, starts the initial paragraph.
     void checkFirstRun();
